--- a/organiseTonFoot/public/css/custom.css
+++ b/organiseTonFoot/public/css/custom.css
@@ -555,3 +555,20 @@ span.error_message
 	width:auto;
 	margin:auto;
 }
+
+/** ScrollToTop **/
+#scrollToTop a{
+	position: fixed;
+	right: 20px;
+	bottom: 10px;
+	background-color: rgb(255,255,255); /** rgba fallback**/
+	background-color: rgba(255,255,255, 0.7);
+	padding: 7px 10px;
+}
+
+#scrollToTop a:hover{
+	box-shadow: 0px 0px 5px #222;
+	-moz-box-shadow: 0px 0px 5px #222;
+	-webkit-box-shadow: 0px 0px 5px #222;
+	text-decoration: none !important;
+}
